# opencl_stuff

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
benchmark/: CMakeLists.txt
src/: CMakeLists.txt
src/exe/: CMakeLists.txt  README  rgb2gray.cpp
src/lib/: CMakeLists.txt  README
src/lib/color_conversion/: BlackWhite.cpp  BlackWhite.h  CMakeLists.txt  black_white.cl
src/lib/image_io/: CMakeLists.txt  Image.cpp  Image.h
test/: CMakeLists.txt
test/color_conversion/: CMakeLists.txt  test_cl_info.cpp
test/image_io/: CMakeLists.txt  test_image_load.cpp
